tests/fail/tuple-lit/check.pion
//~ run = "${PION} elab ${FILE}"

let _ = (false, false, false) : (Int, Int, Int, Int);
let _ = (false, false, false) : (Int, Int, Int);
let _ = (false, false, false) : (Int, Int);

{}
